@@ -1,4 +1,5 @@
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 /**
@@ -8,52 +9,49 @@ import java.util.List;
  */
 public class Solution78 {
 
-    private List<List<Integer>> res = new ArrayList<>();
-
+    List<List<Integer>> res = new LinkedList<>();
     /**
      * 解法一：回溯
-     * https://labuladong.gitbook.io/algo/suan-fa-si-wei-xi-lie/zi-ji-pai-lie-zu-he
+     * https://mp.weixin.qq.com/s/qT6WgR6Qwn7ayZkI3AineA
      * @param nums
      * @return
      */
-    public List<List<Integer>> subsets(int[] nums) {
-        List<Integer> trace = new ArrayList<>();
-        backtrace(nums, 0, trace);
+    public List<List<Integer>> subsetsWithDup(int[] nums) {
+        LinkedList<Integer> track = new LinkedList<>();
+        backtrack(nums, track, 0);
         return res;
     }
 
-    private void backtrace(int[] nums, int start, List<Integer> trace){
-        res.add(new ArrayList<>(trace));   //注意：这里需要new一个对象把trace的值放进去，否则for中会更新trace的值
+    private void backtrack(int[] nums, LinkedList<Integer> track, int start) {
+        res.add(new LinkedList<>(track));
+
         for(int i = start; i < nums.length; i++){
-            trace.add(nums[i]);
-            backtrace(nums, i + 1, trace);
-            trace.remove(trace.size() - 1);
+            track.add(nums[i]);
+            backtrack(nums, track, start + 1);
+            track.removeLast();
         }
     }
 
+
     /**
      * 解法二：迭代
-     * https://leetcode.wang/leetCode-78-Subsets.html（解法二）
      * @param nums
      * @return
      */
     public List<List<Integer>> subsets2(int[] nums) {
-        List<List<Integer>> res = new ArrayList<>();
-        res.add(new ArrayList<>());
-        for (int num : nums) {
-            List<List<Integer>> tmp_res = new ArrayList<>();
-            for (List<Integer> oneOfRes : res) {
-                List<Integer> tmp = new ArrayList<>(oneOfRes);
-                tmp.add(num);
-                tmp_res.add(tmp);
-            }
-            res.addAll(tmp_res);
-        }
-        return res;
-    }
+        List<List<Integer>> res = new LinkedList<>();
+        res.add(new LinkedList<>());
 
-    public static void main(String[] args) {
-        Solution78 solution78 = new Solution78();
-        System.out.println(solution78.subsets(new int[]{1,2,3}));
+        for (int num : nums) {
+            int size = res.size();
+            for(int i = 0; i < size; i++){
+                // 注意：这里需要 new 一个对象，不可以直接赋值
+                List<Integer> cur = new LinkedList<>(res.get(i));
+                cur.add(num);
+                res.add(cur);
+            }
+        }
+
+        return res;
     }
 }
